Stylization on navigation bar.

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -35,15 +35,17 @@
             width: 0.15rem;
             height: 100%;"></div>
           <div class="px-1">
+            <!-- Need to connect web player api to this svg -->
             <img src="play_button.svg" alt="Click to Play" height="12" width="12" style="margin-left: 0.3rem; margin-right: 0.3rem;">
           </div>
           <div style="height: 29px; width: 1px; background-color: black;"></div>
           <div class="px-1">
+            <!-- Need to connect volume adjustor to this svg -->
             <img src="volume.svg" alt="Volume Icon" width="20" height="20" style="margin-left: 0.3rem; margin-right: 0.3rem;"></img>
           </div>
           <div style="height: 29px; width: 1px; background-color: black;"></div>
           <div>
-            <p class="px-3"><b>The Redwood Rewind</b> with <b>DJ Mist</b></p>
+            <p class="px-3"><b>The Redwood Rewind</b><span style="font-family: 'IBM Plex Mono', monospace;"> with </span><b>DJ Mist</b></p>
           </div>
         </div>
         <div style="padding-right: 1.5rem;">
@@ -73,7 +75,7 @@
           </div>
           <div style="height: 29px; width: 1px; background-color: black;"></div>
           <div>
-            <p class="px-3 py-1">Ruckus (feat. Richard Judge) - Club Edit, Mixed</p>
+            <p class="px-3 py-1" style="font-family: 'IBM Plex Mono', monospace;">Ruckus (feat. Richard Judge) - Club Edit, Mixed</p>
           </div>
         </div>
         <div class="flex" style="padding-right: 1.5rem">
