--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -2,57 +2,62 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Currently coded in mix of Tailwind and standard CSS -->
-<div class="font-medium text-sm shadow-lg z-10 bg-neutral-100"
+<div id="nav" class="font-medium text-sm shadow-lg z-10 bg-neutral-100"
   style="
   position: fixed; 
   left: 0; 
   right: 0; 
   top: 0;
+  height: 60px;
   color: black;
-  height: 60px;">
-  <div class="flex justify-between items-center" style="height: 60px; border: 0.1rem solid;">
+  border: 0.1rem solid;">
+  <div class="flex justify-between items-center" style="height: 58px;">
     <div class="flex px-3 py-3 items-center" style="
       border-right: 1px solid black;
       height: 100%;
       padding-left: 1.5rem;
       padding-right: 1.5rem;">
       <a href="#">
-        <img src="kscu_logo.svg" alt="KSCU Logo" width="150" height="60"></img>
+        <img src="kscu_logo.svg" alt="KSCU Logo" width="150" height="55"></img>
       </a>
     </div>
     <!-- Vertical Flexbox -->
     <div class="flex flex-col w-screen">
       <!-- Top Row Flexbox -->
-      <div class="flex justify-between items-center">
+      <div id="top-row" class="flex justify-between items-center" style="height: 29px;">
         <div class="flex px-1 items-center">
           <div class="flex items-center py-1">
-            <p class="px-2 font-bold">LIVE</p>
-            <span style="margin-right: 0.5rem;" id="live-now-circle"></span>
+            <!-- id live-play for text live and divisor -->
+            <p id="live-play" class="px-2 font-bold">LIVE</p>
+            <span id="live-now-circle"></span>
           </div>
-          <div style="height: 29px; width: 1px; background-color: black;"></div>
+          <div id="live-play" style="height: 29px; width: 1px; background-color: black; margin-left: 0.5rem;"></div>
           <div style="
             background-color: black;
             width: 0.15rem;
             height: 100%;"></div>
-          <div class="px-1">
+            <!-- play-volume for play and volume icons -->
+          <div id="play-volume" class="px-1">
             <!-- Need to connect web player api to this svg -->
             <img src="play_button.svg" alt="Click to Play" height="12" width="12" style="margin-left: 0.3rem; margin-right: 0.3rem;">
           </div>
-          <div style="height: 29px; width: 1px; background-color: black;"></div>
-          <div class="px-1">
+          <div id="play-volume" style="height: 29px; width: 1px; background-color: black;"></div>
+          <div id="play-volume" class="px-1">
             <!-- Need to connect volume adjustor to this svg -->
             <img src="volume.svg" alt="Volume Icon" width="20" height="20" style="margin-left: 0.3rem; margin-right: 0.3rem;"></img>
           </div>
-          <div style="height: 29px; width: 1px; background-color: black;"></div>
+          <!-- contain to row by setting height to 29px -->
+          <div id="play-volume" style="height: 29px; width: 1px; background-color: black;"></div>
           <div>
             <p class="px-3"><b>The Redwood Rewind</b><span style="font-family: 'IBM Plex Mono', monospace;"> with </span><b>DJ Mist</b></p>
           </div>
         </div>
-        <div style="padding-right: 1.5rem;">
-          <ul class="flex flex-col list-none ltr:text-right rtl:text-left sm:flex-row">
+        <div id="page-links" class="flex items-center" style="padding-right: 1.5rem;">
+          <div style="height: 29px; width: 1px; background-color: black; margin-right: 1rem;"></div>
+          <ul class="flex list-none ltr:text-right rtl:text-left sm:flex-row">
             {{ if .Site.Menus.main }}
             {{ range .Site.Menus.main }}
-            <li class="mb-1 sm:mb-0 ltr:sm:mr-7 ltr:sm:last:mr-0 rtl:sm:ml-7 rtl:sm:last:ml-0">
+            <li style="margin-left: 1rem;">
               <a class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2" href="{{ .URL }}"
                 title="{{ .Title }}">{{ .Name | markdownify | emojify }}</a>
             </li>
@@ -68,17 +73,20 @@
         background-color: black;">
       </div>
       <!-- TODO connect API to this playing -->
-      <div class="flex items-center justify-between">
+      <div id="bottom-row" class="flex items-center justify-between">
         <div class="flex items-center justify-between">
-          <div class="flex items-center">
+          <!-- remove playing text when screen adjusting -->
+          <div id="playing-text" class="flex items-center">
             <p class="px-3 py-1 font-bold">PLAYING</p>
           </div>
-          <div style="height: 29px; width: 1px; background-color: black;"></div>
+          <!-- contain to row by setting height to 29px -->
+          <div id="playing-text" style="height: 29px; width: 1px; background-color: black;"></div>
           <div>
-            <p class="px-3 py-1" style="font-family: 'IBM Plex Mono', monospace;">Ruckus (feat. Richard Judge) - Club Edit, Mixed</p>
+            <p class="px-3 py-1" style="height: 30px; font-family: 'IBM Plex Mono', monospace;">Ruckus (feat. Richard Judge) - Club Edit, Mixed</p>
           </div>
         </div>
-        <div class="flex" style="padding-right: 1.5rem">
+        <div id="social-media" class="flex items-center" style="padding-right: 1rem">
+          <div style="height: 29px; width: 1px; background-color: black; margin-right: 1rem;"></div>
           <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
             <i class="fa fa-instagram px-2" style="font-size: 24px; color: black;"></i>
           </a>
@@ -89,6 +97,62 @@
             <i class="fa fa-spotify px-2" style="font-size: 24px; color: black;"></i>
           </a>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- create a third row when screen width is too small-->
+<div id="third-row">
+  <div id="third-row"class="font-medium text-sm shadow-lg z-10 bg-neutral-100"
+  style="
+  position: fixed; 
+  left: 0; 
+  right: 0; 
+  top: 60px;
+  height: 30px;
+  color: black;
+  border-bottom: 0.1rem solid;
+  border-right: 0.1rem solid;
+  border-left: 0.1rem solid;">
+    <div class="flex justify-between items-center">
+      <div class="flex justify-left items-center">
+        <div id="new-social-media" class="flex items-center" style="padding-left: 1rem">
+          <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
+            <i class="fa fa-instagram px-2" style="font-size: 24px; color: black;"></i>
+          </a>
+          <a href="https://twitter.com/kscu" target="_blank">
+            <i class="fa fa-twitter px-2" style="font-size: 24px; color: black;"></i>
+          </a>
+          <a href="https://open.spotify.com/user/kscu" target="_blank">
+            <i class="fa fa-spotify px-2" style="font-size: 24px; color: black;"></i>
+          </a>
+          <div style="height: 29px; width: 1px; background-color: black; margin-left: 1rem;"></div>
+        </div>
+        <div class="px-1" >
+          <!-- Need to connect web player api to this svg -->
+          <img src="play_button.svg" alt="Click to Play" height="12" width="12" style="margin-left: 0.3rem; margin-right: 0.3rem;">
+        </div>
+        <div style="height: 29px; width: 1px; background-color: black;"></div>
+        <div class="px-1">
+          <!-- Need to connect volume adjustor to this svg -->
+          <img src="volume.svg" alt="Volume Icon" width="20" height="20" style="margin-left: 0.3rem; margin-right: 0.3rem;"></img>
+        </div>
+        <div style="height: 29px; width: 1px; background-color: black;"></div>
+      </div>
+
+      <div id="new-page-links" class="flex items-center" style="padding-right: 1.5rem; height: 30px;">
+        <div style="height: 29px; width: 1px; background-color: black; margin-right: 1rem;"></div>
+        <ul class="flex list-none ltr:text-right rtl:text-left sm:flex-row">
+          {{ if .Site.Menus.main }}
+          {{ range .Site.Menus.main }}
+          <li style="margin-left: 1rem;">
+            <a class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2" href="{{ .URL }}"
+              title="{{ .Title }}">{{ .Name | markdownify | emojify }}</a>
+          </li>
+          {{ end }}
+          {{ end }}
+        </ul>
       </div>
     </div>
   </div>
@@ -126,6 +190,43 @@
       animation: pulse-red 2s infinite;
       animation-play-state: running;
       margin-right: 1px
+  }
+
+  /* hides third row until screen width gets smaller */
+  @media (min-width: 821px) {
+    #third-row {
+      display: none;
+    }
+  }
+
+  /* move social media, page links, play button, and volume button to third row */
+  @media (max-width: 820px) {
+    #social-media {
+      display: none;
+    }
+    #page-links {
+      display: none;
+    }
+    #play-volume {
+      display: none;
+    }
+  }
+
+  /* remove play text to make more room for song text*/
+  @media (max-width: 650px) {
+    #playing-text {
+      display: none;
+    }
+  }
+
+  /* remove live text to make more room for dj text */
+  @media (max-width: 550px) {
+    #live-play {
+      display: none;
+    }
+    #live-now-circle {
+      margin-left: 0.5rem;
+    }
   }
 </style>
 
