--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -2147,10 +2147,6 @@ body:has(#menu-controller:checked) {
   max-width: 65ch;
 }
 
-.max-w-\[1124px\] {
-  max-width: 1124px;
-}
-
 .max-w-3xl {
   max-width: 48rem;
 }
@@ -2321,9 +2317,9 @@ body:has(#menu-controller:checked) {
   background-color: rgba(var(--color-neutral), 0.5);
 }
 
-.bg-neutral-900 {
+.bg-neutral-100 {
   --tw-bg-opacity: 1;
-  background-color: rgba(var(--color-neutral-900), var(--tw-bg-opacity));
+  background-color: rgba(var(--color-neutral-100), var(--tw-bg-opacity));
 }
 
 .bg-neutral-500\/50 {
@@ -2332,11 +2328,6 @@ body:has(#menu-controller:checked) {
 
 .bg-transparent {
   background-color: transparent;
-}
-
-.bg-neutral-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--color-neutral-100), var(--tw-bg-opacity));
 }
 
 .bg-neutral-300 {
@@ -2416,14 +2407,19 @@ body:has(#menu-controller:checked) {
   padding-bottom: 1px;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .px-4 {
@@ -2436,12 +2432,12 @@ body:has(#menu-controller:checked) {
   padding-bottom: 1.5rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
-}
-
 .pt-3 {
   padding-top: 0.75rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .pl-2 {
@@ -2460,6 +2456,10 @@ body:has(#menu-controller:checked) {
   text-align: right;
 }
 
+.text-justify {
+  text-align: justify;
+}
+
 .align-top {
   vertical-align: top;
 }
@@ -2468,14 +2468,14 @@ body:has(#menu-controller:checked) {
   vertical-align: text-bottom;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-sm {
@@ -2505,6 +2505,10 @@ body:has(#menu-controller:checked) {
 
 .text-\[0\.6rem\] {
   font-size: 0.6rem;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .font-semibold {
@@ -2545,11 +2549,6 @@ body:has(#menu-controller:checked) {
 
 .leading-3 {
   line-height: .75rem;
-}
-
-.text-\[\#ff5733\] {
-  --tw-text-opacity: 1;
-  color: rgb(255 87 51 / var(--tw-text-opacity));
 }
 
 .text-neutral-400 {
@@ -3038,10 +3037,6 @@ body:has(#menu-controller:checked) {
 }
 
 @media (min-width: 640px) {
-  .sm\:mb-0 {
-    margin-bottom: 0px;
-  }
-
   .sm\:w-1\/2 {
     width: 50%;
   }
@@ -3071,22 +3066,6 @@ body:has(#menu-controller:checked) {
   .sm\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
-  }
-
-  [dir="ltr"] .ltr\:sm\:mr-7 {
-    margin-right: 1.75rem;
-  }
-
-  [dir="ltr"] .ltr\:sm\:last\:mr-0:last-child {
-    margin-right: 0px;
-  }
-
-  [dir="rtl"] .rtl\:sm\:ml-7 {
-    margin-left: 1.75rem;
-  }
-
-  [dir="rtl"] .rtl\:sm\:last\:ml-0:last-child {
-    margin-left: 0px;
   }
 }
 
