--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -1,17 +1,18 @@
 <!-- Ignores default margins on the template -->
-<footer class="bg-neutral-100 font-sm text-sm relative border" style="
+<footer class="font-sm text-sm relative" style="
   width: 100vw;
   left: 50%;
   right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
-  margin-top: 20px;
+  margin-top: 0px;
   color: black;
 ">
-  <div class="flex flex-col justify-between">
+  <div class="px-10 py-2">
+  <div class="flex flex-col justify-between border">
   <div id="flex_container" class="flex justify-between items-center px-2" style="font-family: 'IBM Plex Mono', monospace;">
     <div id="title_footer">
-      <p id="title_text" class="text-2xl font-bold"> KSCU 103.3FM </p>
+      <p id="title_text" class="text-2xl font-bold"> KSCU 103.3 FM </p>
       <p id="title_text" class="text-base"> Santa Clara University's Student Run Radio</p>
     </div>
     <div id="address" class="text-md py-3 font-medium">
@@ -22,8 +23,8 @@
   </div>
   <div style="
     background-color: white;
-    height: 0.1rem;
-  "></div>
+    height: 0.1rem;"></div>
+  </div>
 
 </div>
 <style>
