--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -2,100 +2,107 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Currently coded in mix of Tailwind and standard CSS -->
-<div id="nav" class="font-medium text-sm shadow-lg z-10 bg-neutral-100"
-  style="
-  position: fixed; 
-  left: 0; 
-  right: 0; 
-  top: 0;
-  height: 60px;
-  color: black;
-  border: 0.1rem solid;">
-  <div class="flex justify-between items-center" style="height: 58px;">
-    <div class="flex px-3 py-3 items-center" style="
+<div id="nav" class="font-medium text-sm z-10" style="
+  position: relative;
+  width: 100vw;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  color: black;">
+  <div class="px-10 py-2">
+    <div class="flex justify-between items-center" style="
+      border: 1px solid black;
+      height: 58px;">
+      <div class="flex px-3 py-6 items-center" style="
       border-right: 1px solid black;
       height: 100%;
       padding-left: 1.5rem;
       padding-right: 1.5rem;">
-      <a href="#">
-        <img src="kscu_logo.svg" alt="KSCU Logo" width="150" height="55"></img>
-      </a>
-    </div>
-    <!-- Vertical Flexbox -->
-    <div class="flex flex-col w-screen">
-      <!-- Top Row Flexbox -->
-      <div id="top-row" class="flex justify-between items-center" style="height: 29px;">
-        <div class="flex px-1 items-center">
-          <div class="flex items-center py-1">
-            <!-- id live-play for text live and divisor -->
-            <p id="live-play" class="px-2 font-bold">LIVE</p>
-            <span id="live-now-circle"></span>
-          </div>
-          <div id="live-play" style="height: 29px; width: 1px; background-color: black; margin-left: 0.5rem;"></div>
-          <div style="
+        <a href="#">
+          <img src="kscu_logo.svg" alt="KSCU Logo" width="120"></img>
+        </a>
+      </div>
+      <!-- Vertical Flexbox -->
+      <div class="flex flex-col w-screen">
+        <!-- Top Row Flexbox -->
+        <div id="top-row" class="flex justify-between items-center" style="height: 29px;">
+          <div class="flex px-1 items-center">
+            <div class="flex items-center py-1">
+              <!-- id live-play for text live and divisor -->
+              <p id="live-play" class="px-2 font-bold">LIVE</p>
+              <span id="live-now-circle"></span>
+            </div>
+            <div id="live-play" style="width: 1px; background-color: black; margin-left: 0.5rem;"></div>
+            <div style="
             background-color: black;
             width: 0.15rem;
             height: 100%;"></div>
             <!-- play-volume for play and volume icons -->
-          <div id="play-volume" class="px-1">
-            <!-- Need to connect web player api to this svg -->
-            <img src="play_button.svg" alt="Click to Play" height="12" width="12" style="margin-left: 0.3rem; margin-right: 0.3rem;">
+            <div id="play-volume" class="px-1">
+              <!-- Need to connect web player api to this svg -->
+              <img src="play_button.svg" alt="Click to Play" height="12" width="12"
+                style="margin-left: 0.3rem; margin-right: 0.3rem;">
+            </div>
+            <div id="play-volume" style="height: 29px; width: 1px; background-color: black;"></div>
+            <div id="play-volume" class="px-1">
+              <!-- Need to connect volume adjustor to this svg -->
+              <img src="volume.svg" alt="Volume Icon" width="20" height="20"
+                style="margin-left: 0.3rem; margin-right: 0.3rem;"></img>
+            </div>
+            <!-- contain to row by setting height to 29px -->
+            <div id="play-volume" style="height: 29px; width: 1px; background-color: black;"></div>
+            <div>
+              <p class="px-3"><b>The Redwood Rewind</b><span style="font-family: 'IBM Plex Mono', monospace;"> with
+                </span><b>DJ Mist</b></p>
+            </div>
           </div>
-          <div id="play-volume" style="height: 29px; width: 1px; background-color: black;"></div>
-          <div id="play-volume" class="px-1">
-            <!-- Need to connect volume adjustor to this svg -->
-            <img src="volume.svg" alt="Volume Icon" width="20" height="20" style="margin-left: 0.3rem; margin-right: 0.3rem;"></img>
-          </div>
-          <!-- contain to row by setting height to 29px -->
-          <div id="play-volume" style="height: 29px; width: 1px; background-color: black;"></div>
-          <div>
-            <p class="px-3"><b>The Redwood Rewind</b><span style="font-family: 'IBM Plex Mono', monospace;"> with </span><b>DJ Mist</b></p>
+          <div id="page-links" class="flex items-center" style="padding-right: 1.5rem;">
+            <div style="height: 29px; width: 1px; background-color: black; margin-right: 1rem;"></div>
+            <ul class="flex list-none ltr:text-right rtl:text-left sm:flex-row">
+              {{ if .Site.Menus.main }}
+              {{ range .Site.Menus.main }}
+              <li style="margin-left: 1rem;">
+                <a class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2"
+                  href="{{ .URL }}" title="{{ .Title }}">{{ .Name | markdownify | emojify }}</a>
+              </li>
+              {{ end }}
+              {{ end }}
+            </ul>
           </div>
         </div>
-        <div id="page-links" class="flex items-center" style="padding-right: 1.5rem;">
-          <div style="height: 29px; width: 1px; background-color: black; margin-right: 1rem;"></div>
-          <ul class="flex list-none ltr:text-right rtl:text-left sm:flex-row">
-            {{ if .Site.Menus.main }}
-            {{ range .Site.Menus.main }}
-            <li style="margin-left: 1rem;">
-              <a class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2" href="{{ .URL }}"
-                title="{{ .Title }}">{{ .Name | markdownify | emojify }}</a>
-            </li>
-            {{ end }}
-            {{ end }}
-          </ul>
-        </div>
-      </div>
-      <!-- White divider line -->
-      <div style="
+        <!-- White divider line -->
+        <div style="
         width: screen;
         height: 1px;
         background-color: black;">
-      </div>
-      <!-- TODO connect API to this playing -->
-      <div id="bottom-row" class="flex items-center justify-between">
-        <div class="flex items-center justify-between">
-          <!-- remove playing text when screen adjusting -->
-          <div id="playing-text" class="flex items-center">
-            <p class="px-3 py-1 font-bold">PLAYING</p>
-          </div>
-          <!-- contain to row by setting height to 29px -->
-          <div id="playing-text" style="height: 29px; width: 1px; background-color: black;"></div>
-          <div>
-            <p class="px-3 py-1" style="height: 30px; font-family: 'IBM Plex Mono', monospace;">Ruckus (feat. Richard Judge) - Club Edit, Mixed</p>
-          </div>
         </div>
-        <div id="social-media" class="flex items-center" style="padding-right: 1rem">
-          <div style="height: 29px; width: 1px; background-color: black; margin-right: 1rem;"></div>
-          <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
-            <i class="fa fa-instagram px-2" style="font-size: 24px; color: black;"></i>
-          </a>
-          <a href="https://twitter.com/kscu" target="_blank">
-            <i class="fa fa-twitter px-2" style="font-size: 24px; color: black;"></i>
-          </a>
-          <a href="https://open.spotify.com/user/kscu" target="_blank">
-            <i class="fa fa-spotify px-2" style="font-size: 24px; color: black;"></i>
-          </a>
+        <!-- TODO connect API to this playing -->
+        <div id="bottom-row" class="flex items-center justify-between">
+          <div class="flex items-center justify-between">
+            <!-- remove playing text when screen adjusting -->
+            <div id="playing-text" class="flex items-center">
+              <p class="px-3 py-1 font-bold">PLAYING</p>
+            </div>
+            <!-- contain to row by setting height to 29px -->
+            <div id="playing-text" style="height: 29px; width: 1px; background-color: black;"></div>
+            <div>
+              <p class="px-3 py-1" style="height: 30px; font-family: 'IBM Plex Mono', monospace;">Ruckus (feat. Richard
+                Judge) - Club Edit, Mixed</p>
+            </div>
+          </div>
+          <div id="social-media" class="flex items-center" style="padding-right: 1rem">
+            <div style="height: 29px; width: 1px; background-color: black; margin-right: 1rem;"></div>
+            <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
+              <i class="fa fa-instagram px-2" style="font-size: 24px; color: black;"></i>
+            </a>
+            <a href="https://twitter.com/kscu" target="_blank">
+              <i class="fa fa-twitter px-2" style="font-size: 24px; color: black;"></i>
+            </a>
+            <a href="https://open.spotify.com/user/kscu" target="_blank">
+              <i class="fa fa-spotify px-2" style="font-size: 24px; color: black;"></i>
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -104,8 +111,7 @@
 
 <!-- create a third row when screen width is too small-->
 <div id="third-row">
-  <div id="third-row"class="font-medium text-sm shadow-lg z-10 bg-neutral-100"
-  style="
+  <div id="third-row" class="font-medium text-sm shadow-lg z-10 bg-neutral-100" style="
   position: fixed; 
   left: 0; 
   right: 0; 
@@ -129,14 +135,16 @@
           </a>
           <div style="height: 29px; width: 1px; background-color: black; margin-left: 1rem;"></div>
         </div>
-        <div class="px-1" >
+        <div class="px-1">
           <!-- Need to connect web player api to this svg -->
-          <img src="play_button.svg" alt="Click to Play" height="12" width="12" style="margin-left: 0.3rem; margin-right: 0.3rem;">
+          <img src="play_button.svg" alt="Click to Play" height="12" width="12"
+            style="margin-left: 0.3rem; margin-right: 0.3rem;">
         </div>
         <div style="height: 29px; width: 1px; background-color: black;"></div>
         <div class="px-1">
           <!-- Need to connect volume adjustor to this svg -->
-          <img src="volume.svg" alt="Volume Icon" width="20" height="20" style="margin-left: 0.3rem; margin-right: 0.3rem;"></img>
+          <img src="volume.svg" alt="Volume Icon" width="20" height="20"
+            style="margin-left: 0.3rem; margin-right: 0.3rem;"></img>
         </div>
         <div style="height: 29px; width: 1px; background-color: black;"></div>
       </div>
@@ -147,8 +155,8 @@
           {{ if .Site.Menus.main }}
           {{ range .Site.Menus.main }}
           <li style="margin-left: 1rem;">
-            <a class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2" href="{{ .URL }}"
-              title="{{ .Title }}">{{ .Name | markdownify | emojify }}</a>
+            <a class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2"
+              href="{{ .URL }}" title="{{ .Title }}">{{ .Name | markdownify | emojify }}</a>
           </li>
           {{ end }}
           {{ end }}
@@ -159,37 +167,38 @@
 </div>
 <style>
   @keyframes pulse-red {
-      0% {
-          transform: scale(0.95);
-          box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
-      }
-  
-      70% {
-          transform: scale(1);
-          box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
-      }
-  
-      100% {
-          transform: scale(0.95);
-          box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
-      }
+    0% {
+      transform: scale(0.95);
+      box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
+    }
+
+    70% {
+      transform: scale(1);
+      box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
+    }
+
+    100% {
+      transform: scale(0.95);
+      box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
+    }
   }
+
   #live-now-circle {
 
-      /* display: flex; */
-      width: 12px;
-      height: 12px;
-      background-color: #b11010;
+    /* display: flex; */
+    width: 12px;
+    height: 12px;
+    background-color: #b11010;
 
-      border-radius: 6px;
-      opacity: 100;
-      display: inline-block;
+    border-radius: 6px;
+    opacity: 100;
+    display: inline-block;
 
-      box-shadow: 0 0 0 0 rgb(48, 27, 27);
-      transform: scale(1);
-      animation: pulse-red 2s infinite;
-      animation-play-state: running;
-      margin-right: 1px
+    box-shadow: 0 0 0 0 rgb(48, 27, 27);
+    transform: scale(1);
+    animation: pulse-red 2s infinite;
+    animation-play-state: running;
+    margin-right: 1px
   }
 
   /* hides third row until screen width gets smaller */
@@ -204,9 +213,11 @@
     #social-media {
       display: none;
     }
+
     #page-links {
       display: none;
     }
+
     #play-volume {
       display: none;
     }
@@ -224,6 +235,7 @@
     #live-play {
       display: none;
     }
+
     #live-now-circle {
       margin-left: 0.5rem;
     }
@@ -231,6 +243,7 @@
 </style>
 
 {{ $jsStore := resources.Get "js/store2.js" | resources.Minify | resources.Fingerprint "sha512" }}
-<script defer type="text/javascript" src="{{ $jsStore.RelPermalink }}" integrity="{{ $jsStore.Data.Integrity }}"></script>
+<script defer type="text/javascript" src="{{ $jsStore.RelPermalink }}"
+  integrity="{{ $jsStore.Data.Integrity }}"></script>
 {{ $jsShow := resources.Get "js/show.js" | resources.Minify | resources.Fingerprint "sha512" }}
 <script defer type="text/javascript" src="{{ $jsShow.RelPermalink }}" integrity="{{ $jsShow.Data.Integrity }}"></script>
