Changed titles to be on right aligned.

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -19,8 +19,8 @@
       height: 100%;
       padding-left: 1.5rem;
       padding-right: 1.5rem;">
-        <a href="#">
-          <img src="kscu_logo.svg" alt="KSCU Logo" width="120"></img>
+        <a href="/">
+          <img src="/kscu_logo.svg" alt="KSCU Logo" width="120"></img>
         </a>
       </div>
       <!-- Vertical Flexbox -->
@@ -41,13 +41,13 @@
             <!-- play-volume for play and volume icons -->
             <div id="play-volume" class="px-1">
               <!-- Need to connect web player api to this svg -->
-              <img src="play_button.svg" alt="Click to Play" height="12" width="12"
+              <img src="/play_button.svg" alt="Click to Play" height="12" width="12"
                 style="margin-left: 0.3rem; margin-right: 0.3rem;">
             </div>
             <div id="play-volume" style="height: 29px; width: 1px; background-color: black;"></div>
             <div id="play-volume" class="px-1">
               <!-- Need to connect volume adjustor to this svg -->
-              <img src="volume.svg" alt="Volume Icon" width="20" height="20"
+              <img src="/volume.svg" alt="Volume Icon" width="20" height="20"
                 style="margin-left: 0.3rem; margin-right: 0.3rem;"></img>
             </div>
             <!-- contain to row by setting height to 29px -->
@@ -137,13 +137,13 @@
         </div>
         <div class="px-1">
           <!-- Need to connect web player api to this svg -->
-          <img src="play_button.svg" alt="Click to Play" height="12" width="12"
+          <img src="/play_button.svg" alt="Click to Play" height="12" width="12"
             style="margin-left: 0.3rem; margin-right: 0.3rem;">
         </div>
         <div style="height: 29px; width: 1px; background-color: black;"></div>
         <div class="px-1">
           <!-- Need to connect volume adjustor to this svg -->
-          <img src="volume.svg" alt="Volume Icon" width="20" height="20"
+          <img src="/volume.svg" alt="Volume Icon" width="20" height="20"
             style="margin-left: 0.3rem; margin-right: 0.3rem;"></img>
         </div>
         <div style="height: 29px; width: 1px; background-color: black;"></div>
