--- a/themes/kscu-theme/layouts/_default/single.html
+++ b/themes/kscu-theme/layouts/_default/single.html
@@ -4,10 +4,10 @@
       {{ if .Params.showBreadcrumbs | default (.Site.Params.article.showBreadcrumbs | default false) }}
         {{ partial "breadcrumbs.html" . }}
       {{ end }}
-      <h1 class="mt-0 text-4xl font-extrabold text-neutral-900 dark:text-neutral">
-        {{ .Title | emojify }}
+      <h1 class="mt-0 text-4xl font-extrabold text-neutral-900 text-right">
+        {{ .Title | emojify | upper }}
       </h1>
-      <div class="mt-8 mb-12 text-base text-neutral-500 dark:text-neutral-400 print:hidden" id="metadata">
+      <div class="mt-8 mb-12 text-base text-neutral-500 dark:text-neutral-400 print:hidden text-right" id="metadata">
         {{ partial "article-meta.html" (dict "context" . "scope" "single") }}
       </div>
     </header>
