--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -32,7 +32,7 @@
               <p id="live-play" class="px-2 font-bold">LIVE</p>
               <span id="live-now-circle"></span>
             </div>
-            <div id="live-play" style="width: 1px; background-color: black; margin-left: 0.5rem;"></div>
+            <div id="live-play" style="height: 28px; width: 1px; background-color: black; margin-left: 0.5rem;"></div>
             <div style="
             background-color: black;
             width: 0.15rem;
@@ -56,13 +56,13 @@
                 </span><b>DJ Mist</b></p>
             </div>
           </div>
-          <div id="page-links" class="flex items-center" style="padding-right: 1.5rem;">
-            <div style="height: 28px; width: 1px; background-color: black; margin-right: 1rem;"></div>
+          <div id="page-links" class="flex items-center" style="padding-right: 1rem;">
+            <div style="height: 28px; width: 1px; background-color: black;"></div>
             <ul class="flex list-none ltr:text-right rtl:text-left sm:flex-row">
               {{ if .Site.Menus.main }}
               {{ range .Site.Menus.main }}
               <li style="margin-left: 1rem;">
-                <a class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2"
+                <a class="decoration-primary-500 hover:text-neutral-500"
                   href="{{ .URL }}" title="{{ .Title }}">{{ .Name | markdownify | emojify }}</a>
               </li>
               {{ end }}
@@ -93,13 +93,13 @@
           <div id="social-media" class="flex items-center" style="padding-right: 1rem">
             <div style="height: 28px; width: 1px; background-color: black; margin-right: 1rem;"></div>
             <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
-              <i class="fa fa-instagram px-2" style="font-size: 24px; color: black;"></i>
+              <i class="fa fa-instagram px-2 hover:text-neutral-500" style="font-size: 24px; color: black;"></i>
             </a>
             <a href="https://twitter.com/kscu" target="_blank">
-              <i class="fa fa-twitter px-2" style="font-size: 24px; color: black;"></i>
+              <i class="fa fa-twitter px-2 hover:text-neutral-500" style="font-size: 24px; color: black;"></i>
             </a>
             <a href="https://open.spotify.com/user/kscu" target="_blank">
-              <i class="fa fa-spotify px-2" style="font-size: 24px; color: black;"></i>
+              <i class="fa fa-spotify px-2 hover:text-neutral-500" style="font-size: 24px; color: black;"></i>
             </a>
           </div>
         </div>
@@ -120,11 +120,12 @@
   margin-right: -50vw;">
     <div class="px-10">
       <div class="flex justify-between items-center" style="
+      height: 30px;
       border-bottom: 0.1rem solid;
       border-left: 0.1rem solid;
       border-right: 0.1rem solid">
         <div class="flex justify-left items-center">
-          <div id="new-social-media" class="flex items-center" style="padding-left: 0.5rem">
+          <div id="new-social-media" class="flex items-center" style="padding-left: 0.5rem; padding-top: 0.1rem">
             <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
               <i class="fa fa-instagram px-2" style="font-size: 24px; color: black;"></i>
             </a>
@@ -134,29 +135,29 @@
             <a href="https://open.spotify.com/user/kscu" target="_blank">
               <i class="fa fa-spotify px-2" style="font-size: 24px; color: black;"></i>
             </a>
-            <div style="height: 29px; width: 1px; background-color: black; margin-left: 0.5rem;"></div>
+            <div style="height: 30px; width: 1px; background-color: black; margin-left: 0.5rem;"></div>
           </div>
           <div class="px-1">
             <!-- Need to connect web player api to this svg -->
             <img src="/play_button.svg" alt="Click to Play" height="12" width="12"
               style="margin-left: 0.5rem; margin-right: 0.3rem;">
           </div>
-          <div style="height: 29px; width: 1px; background-color: black;"></div>
+          <div style="height: 30px; width: 1px; background-color: black;"></div>
           <div class="px-1">
             <!-- Need to connect volume adjustor to this svg -->
             <img src="/volume.svg" alt="Volume Icon" width="20" height="20"
               style="margin-left: 0.3rem; margin-right: 0.3rem;"></img>
           </div>
-          <div style="height: 29px; width: 1px; background-color: black;"></div>
+          <div style="height: 30px; width: 1px; background-color: black;"></div>
         </div>
 
         <div id="new-page-links" class="flex items-center" style="padding-right: 1rem; height: 30px;">
-          <div style="height: 29px; width: 1px; background-color: black;"></div>
+          <div style="height: 30px; width: 1px; background-color: black;"></div>
           <ul class="flex list-none ltr:text-right rtl:text-left sm:flex-row">
             {{ if .Site.Menus.main }}
             {{ range .Site.Menus.main }}
             <li style="margin-left: 1rem;">
-              <a class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2"
+              <a class="hover:text-neutral-500"
                 href="{{ .URL }}" title="{{ .Title }}">{{ .Name | markdownify | emojify }}</a>
             </li>
             {{ end }}
