--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Currently coded in mix of Tailwind and standard CSS -->
-<div id="nav" class="font-medium text-sm z-10" style="
+<!-- 
   position: relative;
   width: 100vw;
   left: 50%;
@@ -10,8 +10,10 @@
   height: 58px;
   margin-left: -50vw;
   margin-right: -50vw;
-  color: black;">
-  <div class="px-10 py-2">
+  color: black;
+ -->
+<div id="nav" class="font-medium text-sm z-10">
+  <div class="px-10 py-2 max-w-7xl m-auto">
     <div class="flex justify-between items-center" style="
       border: 1px solid black;
       height: 58px;">
