--- a/themes/kscu-theme/layouts/_default/simple.html
+++ b/themes/kscu-theme/layouts/_default/simple.html
@@ -4,7 +4,7 @@
       {{ if .Params.showBreadcrumbs | default (.Site.Params.article.showBreadcrumbs | default false) }}
         {{ partial "breadcrumbs.html" . }}
       {{ end }}
-      <h1 class="mt-0 text-4xl font-extrabold text-neutral-900 text-right">
+      <h1 class="mt-0 text-4xl font-extrabold text-neutral-900">
         {{ .Title | emojify upper }}
       </h1>
     </header>
