--- a/themes/kscu-theme/layouts/_default/single.html
+++ b/themes/kscu-theme/layouts/_default/single.html
@@ -4,7 +4,7 @@
       {{ if .Params.showBreadcrumbs | default (.Site.Params.article.showBreadcrumbs | default false) }}
         {{ partial "breadcrumbs.html" . }}
       {{ end }}
-      <h1 class="mt-0 text-4xl font-extrabold text-neutral-900 text-right">
+      <h1 class="mt-0 text-4xl font-extrabold text-neutral-900">
         {{ .Title | emojify | upper }}
       </h1>
       <div class="mt-8 mb-12 text-base text-neutral-500 dark:text-neutral-400 print:hidden text-right" id="metadata">
@@ -19,7 +19,7 @@
           </div>
         </div>
       {{ end }}
-      <div class="min-w-0 min-h-0 max-w-prose">
+      <div class="min-w-0 min-h-0 max-w-3xl">
         {{ .Content | emojify }}
       </div>
     </section>
