--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -2151,16 +2151,12 @@ body:has(#menu-controller:checked) {
   max-width: 100%;
 }
 
-.max-w-5xl {
-  max-width: 64rem;
+.max-w-3xl {
+  max-width: 48rem;
 }
 
 .max-w-7xl {
   max-width: 80rem;
-}
-
-.max-w-3xl {
-  max-width: 48rem;
 }
 
 .max-w-\[10rem\] {
@@ -2429,6 +2425,11 @@ body:has(#menu-controller:checked) {
   padding-bottom: 1px;
 }
 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -2444,11 +2445,6 @@ body:has(#menu-controller:checked) {
   padding-bottom: 1.5rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
 .pt-3 {
   padding-top: 0.75rem;
 }
@@ -2459,6 +2455,14 @@ body:has(#menu-controller:checked) {
 
 .pl-2 {
   padding-left: 0.5rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pt-4 {
