--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -13,7 +13,7 @@
   color: black;
  -->
 <div id="nav" class="font-medium text-sm z-10">
-  <div class="px-10 py-2 max-w-7xl m-auto">
+  <div class="px-6 pt-4 max-w-7xl m-auto">
     <div class="flex justify-between items-center" style="
       border: 1px solid black;
       height: 58px;">
