Fixed breakpoint I broke with new margin system

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -112,20 +112,13 @@
 
 <!-- create a third row when screen width is too small-->
 <div id="third-row">
-  <div id="third-row" class="font-medium text-sm z-10" style="
-  position: relative;
-  width: 100vw;
-  left: 50%;
-  right: 50%;
-  top: 8px;
-  margin-left: -50vw;
-  margin-right: -50vw;">
-    <div class="px-10">
+  <div id="third-row" class="font-medium text-sm z-10">
+    <div class="px-6">
       <div class="flex justify-between items-center" style="
       height: 30px;
-      border-bottom: 0.1rem solid;
-      border-left: 0.1rem solid;
-      border-right: 0.1rem solid">
+      border-bottom: 1px solid black;
+      border-left: 1px solid black;
+      border-right: 1px solid black">
         <div class="flex justify-left items-center">
           <div id="new-social-media" class="flex items-center" style="padding-left: 0.5rem; padding-top: 0.1rem">
             <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
