--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -19,7 +19,9 @@
       height: 58px;">
       <div class="flex px-3 py-6 items-center" style="
       border-right: 1px solid black;
-      height: 100%;">
+      height: 100%;
+      min-width: 100px;
+      ">
         <a href="/">
           <img src="/kscu_logo.svg" alt="KSCU Logo" width="120"></img>
         </a>
@@ -53,9 +55,10 @@
             </div>
             <!-- contain to row by setting height to 29px -->
             <div id="play-volume" style="height: 28px; width: 1px; background-color: black;"></div>
-            <div>
-              <p class="px-3"><b>The Redwood Rewind</b><span style="font-family: 'IBM Plex Mono', monospace; height: 28px;"> with
-                </span><b>DJ Mist</b></p>
+            <div class="flex flex-row overflow-hidden">
+              <div class="pl-2 overflow-hidden">
+                <p class="overflow-hidden whitespace-nowrap" id="show_title"></p>
+              </div>
             </div>
           </div>
           <div id="page-links" class="flex items-center" style="padding-right: 1rem;">
@@ -64,8 +67,9 @@
               {{ if .Site.Menus.main }}
               {{ range .Site.Menus.main }}
               <li style="margin-left: 1rem;">
-                <a class="decoration-primary-500 hover:text-neutral-500"
-                  href="{{ .URL }}" title="{{ .Title }}">{{ .Name | markdownify | emojify }}</a>
+                <a class="decoration-primary-500 hover:text-neutral-500" href="{{ .URL }}" title="{{ .Title }}">{{
+                  .Name
+                  | markdownify | emojify }}</a>
               </li>
               {{ end }}
               {{ end }}
@@ -87,9 +91,9 @@
             </div>
             <!-- contain to row by setting height to 29px -->
             <div id="playing-text" style="height: 28px; width: 1px; background-color: black;"></div>
-            <div>
-              <p class="px-3 py-1" style="height: 30px; font-family: 'IBM Plex Mono', monospace;">Ruckus (feat. Richard
-                Judge) - Club Edit, Mixed</p>
+            <div class="flex flex-row overflow-hidden">
+              <p id="playing-song" class="pl-2 pr-3 py-1 overflow-hidden whitespace-nowrap" style="height: 30px; font-family: 'IBM Plex Mono', monospace;">
+              </p>
             </div>
           </div>
           <div id="social-media" class="flex items-center" style="padding-right: 1rem">
@@ -152,8 +156,9 @@
             {{ if .Site.Menus.main }}
             {{ range .Site.Menus.main }}
             <li style="margin-left: 1rem;">
-              <a class="hover:text-neutral-500"
-                href="{{ .URL }}" title="{{ .Title }}">{{ .Name | markdownify | emojify }}</a>
+              <a class="hover:text-neutral-500" href="{{ .URL }}" title="{{ .Title }}">{{ .Name | markdownify |
+                emojify
+                }}</a>
             </li>
             {{ end }}
             {{ end }}
@@ -239,9 +244,10 @@
     }
   }
 </style>
-
 {{ $jsStore := resources.Get "js/store2.js" | resources.Minify | resources.Fingerprint "sha512" }}
 <script defer type="text/javascript" src="{{ $jsStore.RelPermalink }}"
   integrity="{{ $jsStore.Data.Integrity }}"></script>
 {{ $jsShow := resources.Get "js/show.js" | resources.Minify | resources.Fingerprint "sha512" }}
+<script defer type="text/javascript" src="{{ $jsShow.RelPermalink }}" integrity="{{ $jsShow.Data.Integrity }}"></script>
+{{ $jsShow := resources.Get "js/spins.js" | resources.Minify | resources.Fingerprint "sha512" }}
 <script defer type="text/javascript" src="{{ $jsShow.RelPermalink }}" integrity="{{ $jsShow.Data.Integrity }}"></script>
