Updated background color

--- a/themes/kscu-theme/layouts/_default/baseof.html
+++ b/themes/kscu-theme/layouts/_default/baseof.html
@@ -9,7 +9,7 @@
 {{- partial "head.html" . -}}
 
 <body
-  class="flex flex-col h-screen text-lg leading-7 bg-[#F5F5F5] text-neutral-900 dark:bg-neutral-800 dark:text-neutral">
+  class="flex flex-col h-screen text-lg leading-7 bg-[#F2F2E4] text-neutral-900 dark:bg-neutral-800 dark:text-neutral">
   <!-- <div id="the-top" class="absolute flex self-center">
       <a
         class="px-3 py-1 text-sm -translate-y-8 rounded-b-lg bg-primary-200 focus:translate-y-0 dark:bg-neutral-600"
