--- a/themes/kscu-theme/layouts/partials/article-links-horizontal.html
+++ b/themes/kscu-theme/layouts/partials/article-links-horizontal.html
@@ -1,32 +1,31 @@
 <article class="px-3">
-  <h3 class="flex items-center justify mt-6 text-lg font-semibold">
-    {{ with .Params.externalUrl }}
-    <div>
-      <a class="text-neutral-800 decoration-primary-500 hover:underline hover:underline-offset-2 dark:text-neutral"
-        href="{{ . }}" target="_blank" rel="external">{{ $.Title | emojify }}</a>
-      <span class="text-xs align-top cursor-default text-neutral-400 dark:text-neutral-500" title="{{ i18n "list.externalurl_title" }}">
-        <span class="rtl:hidden">&#8599;</span>
-        <span class="ltr:hidden">&#8598;</span>
-      </span>
+    <!-- <h2 class="font-semibold text-2xl py-3">{{ .Title }}</h2> -->
+    <h3 class="flex items-center justify mt-6 text-lg font-semibold">
+      {{ with .Params.externalUrl }}
+      <div>
+        <a class="text-neutral-800 decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2 hover:text-gray-400"
+          href="{{ . }}" rel="external">{{ $.Title | emojify }}</a>
+        <span class="text-xs align-top cursor-default text-neutral-400 dark:text-neutral-500" title="{{ i18n "list.externalurl_title" }}">
+          <span class="rtl:hidden">&#8599;</span>
+          <span class="ltr:hidden">&#8598;</span>
+        </span>
+      </div>
+      {{ else }}
+      <a class="text-neutral-800 hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy" href="{{ .RelPermalink }}">{{ .Title |
+        emojify }}</a>
+      {{ end }}
+      {{ if and .Draft .Site.Params.article.showDraftLabel }}
+      <div class=" ltr:ml-2 rtl:mr-2">
+        {{ partial "badge.html" (i18n "article.draft" | emojify) }}
+      </div>
+      {{ end }}
+      {{ if templates.Exists "partials/extend-article-link.html" }}
+      {{ partial "extend-article-link.html" . }}
+      {{ end }}
+    </h3>
+    <div class="text-sm text-neutral-500 dark:text-neutral-400">
+      {{ partial "article-meta.html" . }}
     </div>
-    {{ else }}
-    <a class="text-neutral-800 decoration-primary-500 dark:text-neutral"
-      href="{{ .RelPermalink }}">{{ .Title | emojify }}</a>
-    {{ end }}
-    {{ if and .Draft .Site.Params.article.showDraftLabel }}
-    <div class=" ltr:ml-2 rtl:mr-2">
-      {{ partial "badge.html" (i18n "article.draft" | emojify) }}
-    </div>
-    {{ end }}
-    {{ if templates.Exists "partials/extend-article-link.html" }}
-    {{ partial "extend-article-link.html" . }}
-    {{ end }}
-  </h3>
-  <div class="text-sm text-neutral-500 dark:text-neutral-400">
-    {{ partial "article-meta.html" . }}
-  </div>
-  <div class="py-1 text-md prose dark:prose-invert">
-    {{ .Summary | emojify }}
-    
-  </div>
+    <div class="py-1 text-md prose dark:prose-invert">
+      {{ .Summary | emojify }}
 </article>
