Moved public inspection file to footer.

--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -16,8 +16,11 @@
       <div id="flex_container" class="flex justify-between items-center px-2"
         style="font-family: 'IBM Plex Mono', monospace;">
         <div id="title_footer">
-          <p id="title_text" class="text-2xl font-bold"> KSCU 103.3 FM </p>
-          <p id="title_text" class="text-base"> Santa Clara University's Student Run Radio</p>
+          <p id="title_text" class="text-xl font-bold text-neutral-900"> KSCU 103.3 FM </p>
+          <p id="title_text" class="text-sm"> Santa Clara University's Student Run Radio</p>
+          <a href="https://publicfiles.fcc.gov/fm-profile/KSCU">
+            <span id="opif" class="text-sm font-bold hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy">Access Public Inspection File (OPIF)</p>
+          </a>
         </div>
         <div id="address" class="text-md py-3 font-medium">
           <p> 500 El Camino Real </p>
