--- a/themes/kscu-theme/layouts/_default/baseof.html
+++ b/themes/kscu-theme/layouts/_default/baseof.html
@@ -39,7 +39,7 @@
       {{ end }}
     </main>
   </div>
-  <canvas id="canvas" style="width:100%; height: 480px; overflow: visible; min-width: 480px;"></canvas>
+  <canvas id="canvas" style="width:100%; height: 480px; overflow: visible; min-width: 480px; z-index: 1;"></canvas>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   <script>
     const config = {
