Fixed changes on volume slider.

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -274,7 +274,7 @@
     #player {
       position: absolute;
       top: 107px;
-      left: 190px;
+      left: 200px;
     }
   }
 
@@ -341,7 +341,7 @@
   /* Function to display and hide volume slider when pressing button */
   function toggleVolume() {
     const volumeSlider = document.getElementById("player")
-    const gap = document.getElementById("play-volume-line")
+    const gap = document.getElementById("volume-line")
 
     if (volumeSlider.style.display === "none") {
       volumeSlider.style.display = "block";
