Hide social media icons in mobile.

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -296,6 +296,12 @@
     }
   }
 
+  @media (max-width: 450px) {
+    #new-social-media {
+      display: none;
+    }
+  }
+
    /* Location and visual appearance of volume slider */
   #player {
     width: 30px;
