Adjusted slider for mobile version.

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -296,9 +296,17 @@
     }
   }
 
+  /* remove social media icons to make room in mobile */
+
   @media (max-width: 450px) {
     #new-social-media {
       display: none;
+    }
+
+    #player {
+      position: absolute;
+      top: 107px;
+      left: 72px;
     }
   }
 
@@ -357,4 +365,6 @@
       gap.style.marginLeft = "0px";
     }
   }
+
+  
 </script>
